--- a/JetstreamSkiservice_Frontend/adminshutdown.html
+++ b/JetstreamSkiservice_Frontend/adminshutdown.html
@@ -71,7 +71,7 @@
             </li>
             <li>
               <a
-                data-page="admin"
+                data-page="contact"
                 href="admin.html"
                 class="block py-2 pl-3 pr-4 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent"
                 >Admin-Panel</a
@@ -102,12 +102,10 @@
       id="form-wrapper"
     >
       <div class="text-center">
-        <div class="inline-flex p-4 bg-green-100 rounded-full">
-          <div class="p-4 bg-green-200 rounded-full stroke-green-600">
-            <span
-              class="flex text-5xl text-green-950 material-symbols-outlined"
-            >
-              done_outline
+        <div class="inline-flex p-4 bg-red-100 rounded-full">
+          <div class="p-4 bg-red-200 rounded-full stroke-red-600">
+            <span class="flex text-5xl text-red-950 material-symbols-outlined">
+              disabled_by_default
             </span>
             <path
               d="M17 16L22 21M22 16L17 21"
@@ -119,10 +117,11 @@
         </div>
       </div>
       <h1 class="mt-5 text-[36px] font-bold dark:text-white lg:text-[50px]">
-        Vielen Dank für Ihre Anfrage!
+        Zugriff verweigert!
       </h1>
       <p class="mt-3 text-neutral-500 dark:text-neutral-300 lg:text-lg">
-        Ihre Anfrage wurde erfolgreich übermittelt.
+        Ihr Admin-Account wurde gesperrt. <br />Bitte den Chef kontaktieren für
+        eine Entsperrung
       </p>
     </div>
     <!-- TEMPLATE_START: templates\footer.html -->
@@ -183,5 +182,6 @@
     </footer>
 
     <!-- TEMPLATE_END: templates\footer.html -->
+    <script src="./js/main.js"></script>
   </body>
 </html>
