--- a/JetstreamSkiservice_Frontend/formerror.html
+++ b/JetstreamSkiservice_Frontend/formerror.html
@@ -71,10 +71,10 @@
             </li>
             <li>
               <a
-                data-page="contact"
+                data-page="admin"
                 href="admin.html"
                 class="block py-2 pl-3 pr-4 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent"
-                >Admin-Pannel</a
+                >Admin-Panel</a
               >
             </li>
             <li>
