--- a/JetstreamSkiservice_Frontend/formerror.html
+++ b/JetstreamSkiservice_Frontend/formerror.html
@@ -124,7 +124,7 @@
       </p>
       <div class="flex justify-end">
         <a
-          href="form.html"
+          href="index.html"
           class="mt-8 text-blue-700 hover:text-white border border-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center mr-2 mb-2 dark:border-blue-500 dark:text-blue-500 dark:hover:text-white dark:hover:bg-blue-500 dark:focus:ring-blue-800"
           >zur Anfrage zurück</a
         >
