--- a/JetstreamSkiservice_Frontend/adminshutdown.html
+++ b/JetstreamSkiservice_Frontend/adminshutdown.html
@@ -14,6 +14,7 @@
     />
     <link href="./css/styles.css" rel="stylesheet" />
     <link rel="icon" type="image/x-icon" href="./assets/img/logo.png" />
+    <title>Access refused</title>
 
     <!-- TEMPLATE_END: templates\head.html -->
     <title>Online Anfrage</title>
