--- a/JetstreamSkiservice_Frontend/admin.html
+++ b/JetstreamSkiservice_Frontend/admin.html
@@ -17,7 +17,7 @@
       <div
         class="w-full max-w-md p-8 space-y-3 bg-white border-2 border-gray-200 rounded-lg shadow-lg"
       >
-        <form>
+        <form id="loginForm">
           <div class="mb-6">
             <label
               for="Username"
@@ -56,5 +56,6 @@
         </form>
       </div>
     </div>
+    <script src="./js/login.js"></script>
   </body>
 </html>
