add status fetch

--- a/JetstreamSkiservice_Frontend/adminconfirm.html
+++ b/JetstreamSkiservice_Frontend/adminconfirm.html
@@ -22,16 +22,25 @@
             Alle Bestellungen anzeigen
           </button>
           <button
+            id="openOrdersBtn"
             type="button"
             class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5"
           >
             Offene Bestellungen
           </button>
           <button
+            id="inWorkOrdersBtn"
             type="button"
             class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5"
           >
             In Arbeit Bestellungen
+          </button>
+          <button
+            id="doneOrdersBtn"
+            type="button"
+            class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5"
+          >
+            abgeschlossene Bestellungen
           </button>
         </div>
         <div
