--- a/JetstreamSkiservice_Frontend/adminconfirm.html
+++ b/JetstreamSkiservice_Frontend/adminconfirm.html
@@ -9,9 +9,9 @@
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body class="bg-slate-50">
-    <div class="flex flex-col items-center justify-center w-full h-screen">
+    <div class="flex flex-col items-center justify-center w-full h-[90vh]">
       <div
-        class="w-full p-8 bg-white border-2 border-gray-200 rounded-lg shadow-lg max-w-7xl"
+        class="w-full p-8 bg-white border-2 border-gray-200 rounded-lg shadow-lg max-w-8xl"
       >
         <div class="flex justify-between mb-4">
           <button
@@ -41,6 +41,27 @@
             class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5"
           >
             abgeschlossene Bestellungen
+          </button>
+          <button
+            id="tiefOrdersBtn"
+            type="button"
+            class="text-white bg-red-700 hover:bg-red-800 focus:ring-4 focus:outline-none focus:ring-red-300 font-medium rounded-lg text-sm px-5 py-2.5"
+          >
+            Sortieren nach: Tief
+          </button>
+          <button
+            id="standardOrdersBtn"
+            type="button"
+            class="text-white bg-red-700 hover:bg-red-800 focus:ring-4 focus:outline-none focus:ring-red-300 font-medium rounded-lg text-sm px-5 py-2.5"
+          >
+            Sortieren nach: Standard
+          </button>
+          <button
+            id="expressOrdersBtn"
+            type="button"
+            class="text-white bg-red-700 hover:bg-red-800 focus:ring-4 focus:outline-none focus:ring-red-300 font-medium rounded-lg text-sm px-5 py-2.5"
+          >
+            Sortieren nach: Express
           </button>
         </div>
         <div
@@ -77,7 +98,6 @@
         </div>
       </div>
     </div>
-
     <script src="./js/adminpanel.js"></script>
   </body>
 </html>
